@@ -5,7 +5,8 @@ o Added loglim-utilities.R, containing a suite of functions to provide a more co
   loglinear models by type ('joint', 'conditional', 'mutual', 'markov', 'saturated') (rev 171)
 o Added mosaic.loglmlist, similar to mosaic.glmlist for models fit using MASS::loglm (rev 173)
 o Both mosaic.glmlist and mosaic.glmlist get an explicit panel=argument; both get some more sensible default
-  default arguments.
+  default arguments (rev 175)
+o Added seq_loglm to fit sequential loglm models to marginal subtables, giving a loglmlist result (rev 176)
 
 
 Version 0.5-8 (2013-03-06)
